fixed circles spacing

--- a/css/style.css
+++ b/css/style.css
@@ -53,11 +53,11 @@ font-size: 20px;
 font-weight: medium;
 float: left;
 display: inline-block;
-width: 80%;
+width: 100%;
 margin-top: 16px;
 margin-left: 16px;
+margin-bottom: 2px;
 }
-
 
 li.times {
 width: 20%;
@@ -77,6 +77,7 @@ p {
   font-family: "Roboto", sans-serif;
   font-size: 18px;
   color: rgba(0, 0, 0, 90);
+  margin-bottom: 18px;
 
 }
 
@@ -86,6 +87,7 @@ li.bus {
   width: 60%;
 display: inline-block;
 margin-left: 16px;
+margin-bottom: 18px;
 
 }
 h3 {
